--- a/WingMate_iOS/View Controllers/Forgot Password/ForgotPasswordVC.xib
+++ b/WingMate_iOS/View Controllers/Forgot Password/ForgotPasswordVC.xib
@@ -27,7 +27,7 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qZg-kF-fZn">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="475"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="397"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-heart" translatesAutoresizingMaskIntoConstraints="NO" id="epP-4Y-IFM">
                                     <rect key="frame" x="20" y="20" width="72" height="72"/>
@@ -38,20 +38,14 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your registered email address." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uuh-sD-ICv">
-                                    <rect key="frame" x="20" y="167" width="232" height="14"/>
-                                    <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="12"/>
-                                    <color key="textColor" name="Label Gray Text Color"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What’s your email?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNl-Jd-LE5">
-                                    <rect key="frame" x="20" y="245" width="102" height="14"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your registered email address to retrieve your password" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uuh-sD-ICv">
+                                    <rect key="frame" x="20" y="167" width="374" height="14"/>
                                     <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="12"/>
                                     <color key="textColor" name="Label Gray Text Color"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tqt-wJ-Njv">
-                                    <rect key="frame" x="20" y="267" width="374" height="40"/>
+                                    <rect key="frame" x="20" y="189" width="374" height="40"/>
                                     <color key="backgroundColor" name="Text Field Bg Color"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="ckX-1D-C3W"/>
@@ -63,7 +57,7 @@
                                     </connections>
                                 </textField>
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jl6-rc-5Kf">
-                                    <rect key="frame" x="20" y="319" width="374" height="16"/>
+                                    <rect key="frame" x="20" y="241" width="374" height="16"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="validation-alert" translatesAutoresizingMaskIntoConstraints="NO" id="gU6-Bp-shB">
                                             <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
@@ -90,13 +84,13 @@
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CZr-aA-G7a">
-                                    <rect key="frame" x="83" y="371" width="248" height="50"/>
+                                    <rect key="frame" x="83" y="293" width="248" height="50"/>
                                     <color key="backgroundColor" name="Purple Theme Color"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="aEh-1H-Eik"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
-                                    <state key="normal" title="Continue">
+                                    <state key="normal" title="Retrieve Password">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </state>
                                     <userDefinedRuntimeAttributes>
@@ -109,7 +103,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zKH-3P-jpC">
-                                    <rect key="frame" x="83" y="423" width="248" height="50"/>
+                                    <rect key="frame" x="83" y="345" width="248" height="50"/>
                                     <state key="normal" image="backbutton"/>
                                     <connections>
                                         <action selector="backButtonPressed:" destination="-1" eventType="touchUpInside" id="otC-ke-FCI"/>
@@ -124,13 +118,13 @@
                                 <constraint firstItem="jl6-rc-5Kf" firstAttribute="top" secondItem="tqt-wJ-Njv" secondAttribute="bottom" constant="12" id="8iO-MQ-nDL"/>
                                 <constraint firstItem="Uuh-sD-ICv" firstAttribute="leading" secondItem="qZg-kF-fZn" secondAttribute="leading" constant="20" id="CFd-81-pfh"/>
                                 <constraint firstItem="tqt-wJ-Njv" firstAttribute="leading" secondItem="qZg-kF-fZn" secondAttribute="leading" constant="20" id="CSq-hD-msI"/>
-                                <constraint firstItem="tqt-wJ-Njv" firstAttribute="top" secondItem="gNl-Jd-LE5" secondAttribute="bottom" constant="8" id="KUD-eF-q2W"/>
+                                <constraint firstAttribute="trailing" secondItem="Uuh-sD-ICv" secondAttribute="trailing" constant="20" id="GHh-yU-XUm"/>
+                                <constraint firstItem="tqt-wJ-Njv" firstAttribute="top" secondItem="Uuh-sD-ICv" secondAttribute="bottom" constant="8" id="INf-un-db3"/>
                                 <constraint firstItem="epP-4Y-IFM" firstAttribute="top" secondItem="qZg-kF-fZn" secondAttribute="top" constant="20" id="PPZ-hw-hd0"/>
                                 <constraint firstItem="zKH-3P-jpC" firstAttribute="top" secondItem="CZr-aA-G7a" secondAttribute="bottom" constant="2" id="SHc-nL-8ur"/>
                                 <constraint firstItem="zKH-3P-jpC" firstAttribute="centerX" secondItem="qZg-kF-fZn" secondAttribute="centerX" id="Sy3-vY-JgA"/>
                                 <constraint firstItem="CZr-aA-G7a" firstAttribute="top" secondItem="jl6-rc-5Kf" secondAttribute="bottom" constant="36" id="ZSI-lj-vqx"/>
                                 <constraint firstItem="CZr-aA-G7a" firstAttribute="centerX" secondItem="qZg-kF-fZn" secondAttribute="centerX" id="a9t-r8-jMp"/>
-                                <constraint firstItem="gNl-Jd-LE5" firstAttribute="top" secondItem="Uuh-sD-ICv" secondAttribute="bottom" constant="64" id="aBd-eb-GtM"/>
                                 <constraint firstItem="jl6-rc-5Kf" firstAttribute="leading" secondItem="qZg-kF-fZn" secondAttribute="leading" constant="20" id="bCC-9u-B8J"/>
                                 <constraint firstAttribute="trailing" secondItem="tqt-wJ-Njv" secondAttribute="trailing" constant="20" id="gc1-gk-lkV"/>
                                 <constraint firstItem="epP-4Y-IFM" firstAttribute="leading" secondItem="qZg-kF-fZn" secondAttribute="leading" constant="20" id="iR5-fl-2Z6"/>
@@ -139,7 +133,6 @@
                                 <constraint firstItem="Uuh-sD-ICv" firstAttribute="top" secondItem="VqB-sv-70E" secondAttribute="bottom" constant="20" id="ndH-jt-CoY"/>
                                 <constraint firstItem="zKH-3P-jpC" firstAttribute="width" secondItem="CZr-aA-G7a" secondAttribute="width" id="o2R-OM-bDy"/>
                                 <constraint firstItem="zKH-3P-jpC" firstAttribute="height" secondItem="CZr-aA-G7a" secondAttribute="height" id="pDG-Fs-uQz"/>
-                                <constraint firstItem="gNl-Jd-LE5" firstAttribute="leading" secondItem="qZg-kF-fZn" secondAttribute="leading" constant="20" id="se3-qC-RiI"/>
                             </constraints>
                         </view>
                     </subviews>
