--- a/WingMate_iOS/View Controllers/Dashboard VC/DashboardVC.xib
+++ b/WingMate_iOS/View Controllers/Dashboard VC/DashboardVC.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DashboardVC" customModule="WingMate_iOS" customModuleProvider="target">
             <connections>
+                <outlet property="labelName" destination="ebj-QM-XgB" id="SdB-YE-Vvw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -80,9 +81,9 @@
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-heart" translatesAutoresizingMaskIntoConstraints="NO" id="s6L-8K-hvF">
                     <rect key="frame" x="20" y="64" width="72" height="72"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dashboard" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebj-QM-XgB">
-                    <rect key="frame" x="20" y="156" width="148" height="35"/>
-                    <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dashboard" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebj-QM-XgB">
+                    <rect key="frame" x="20" y="156" width="374" height="28"/>
+                    <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="24"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -124,6 +125,7 @@
                 <constraint firstItem="K5n-hI-rot" firstAttribute="width" secondItem="CIK-Ig-KUo" secondAttribute="width" id="g8w-hA-0Ef"/>
                 <constraint firstItem="Nf5-vk-Q2V" firstAttribute="top" secondItem="K5n-hI-rot" secondAttribute="bottom" constant="20" id="t9n-le-LMN"/>
                 <constraint firstItem="K5n-hI-rot" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="vvQ-qI-04S"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ebj-QM-XgB" secondAttribute="trailing" constant="20" id="wmW-1O-dcu"/>
                 <constraint firstItem="ebj-QM-XgB" firstAttribute="top" secondItem="s6L-8K-hvF" secondAttribute="bottom" constant="20" id="ygx-Y4-zoh"/>
             </constraints>
             <point key="canvasLocation" x="62" y="84"/>
