--- a/WingMate_iOS/View Controllers/Email Verification/EmailVerificationVC.xib
+++ b/WingMate_iOS/View Controllers/Email Verification/EmailVerificationVC.xib
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -23,19 +21,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="email_verification" translatesAutoresizingMaskIntoConstraints="NO" id="IB4-SU-1Sj">
-                    <rect key="frame" x="97" y="156" width="220" height="132.66666666666663"/>
+                    <rect key="frame" x="97" y="155.5" width="220" height="133"/>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-heart" translatesAutoresizingMaskIntoConstraints="NO" id="ERn-1Y-8kB">
                     <rect key="frame" x="20" y="20" width="72" height="72"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Didn't receive a link?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eyw-Gs-HVT">
-                    <rect key="frame" x="142" y="659.66666666666663" width="130.33333333333337" height="16.333333333333371"/>
+                    <rect key="frame" x="142" y="659.5" width="130.5" height="16.5"/>
                     <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                     <color key="textColor" name="Label Gray Text Color"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jIz-BS-ORe">
-                    <rect key="frame" x="82.666666666666671" y="666" width="248.66666666666663" height="50"/>
+                    <rect key="frame" x="83" y="666" width="248" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="uys-Vp-hsN"/>
                     </constraints>
@@ -44,11 +42,11 @@
                         <color key="titleColor" name="Red Theme Color"/>
                     </state>
                     <connections>
-                        <action selector="sendEmailAgainButtonPressed:" destination="-1" eventType="touchUpInside" id="05H-w1-Fj7"/>
+                        <action selector="resendEmailButtonPressed:" destination="-1" eventType="touchUpInside" id="05H-w1-Fj7"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xzs-ac-hqY">
-                    <rect key="frame" x="82.666666666666671" y="512.66666666666663" width="248.66666666666663" height="50"/>
+                    <rect key="frame" x="83" y="512.5" width="248" height="50"/>
                     <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                     <state key="normal" title="Wrong email?">
                         <color key="titleColor" name="Red Theme Color"/>
@@ -58,7 +56,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IrK-w1-rUA">
-                    <rect key="frame" x="82.666666666666671" y="458.66666666666669" width="248.66666666666663" height="50"/>
+                    <rect key="frame" x="83" y="458.5" width="248" height="50"/>
                     <color key="backgroundColor" name="Purple Theme Color"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="ra5-ca-jZJ"/>
@@ -77,19 +75,19 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email verification for" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8y-q4-1MM">
-                    <rect key="frame" x="20" y="328.66666666666669" width="374" height="21"/>
+                    <rect key="frame" x="20" y="328.5" width="374" height="21"/>
                     <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="18"/>
                     <color key="textColor" name="Purple Theme Color"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hi Nick! you're almost ready to start enjoying Wingmate! Simply click on the button to verify your email address." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KvO-3b-NW8">
-                    <rect key="frame" x="62" y="386.66666666666669" width="290" height="42"/>
+                    <rect key="frame" x="62" y="386.5" width="290" height="42"/>
                     <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="12"/>
                     <color key="textColor" name="Label Gray Text Color"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nick@gmail.com" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fld-v4-2wG">
-                    <rect key="frame" x="20" y="357.66666666666669" width="374" height="21"/>
+                    <rect key="frame" x="20" y="357.5" width="374" height="21"/>
                     <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="18"/>
                     <color key="textColor" name="Red Theme Color"/>
                     <nil key="highlightedColor"/>
